clang/test/BSC/Negative/Ownership/RuleCheck/return/return.cbs
// RUN: %clang_cc1 -verify %s

struct A {};

void func4(int * owned a) {
	return;
	int * b = (int *)a;
} // expected-error {{a's memory will leak at the end of scope}}

void func5(int num) {
	int b = 5;
	int * owned p = (int * owned)&b;
	int * owned a;
	if (num > 0) {
		a = p;
	} else {
		return; // expected-error {{p's memory will leak at the end of scope}}
	}
} // expected-error {{a's memory will leak at the end of scope}}

void func(struct A owned a) {
	struct A owned b = a;
} // expected-error {{b's memory will leak at the end of scope}}

void func9(int * owned a) {
	{
		int * p = (int *)a;
	}
	{
		int * owned q = a; // expected-error {{cannot read a, because it is moved at line: 27}}
	} // expected-error {{q's memory will leak at the end of scope}}
}

int main() {
	return 0;
}